--- a/package.json
+++ b/package.json
@@ -5,26 +5,29 @@
     "chai": "^4.3.4",
     "express": "^4.17.2",
     "jquery": "^3.6.0",
-<<<<<<< HEAD
+    "lgtv2": "^1.4.1",
     "lgtv2mqtt": "^0.2.0",
     "mocha": "^9.1.3",
     "mongodb": "^4.2.1",
+    "mqtt": "^4.3.5",
     "request": "^2.88.2",
     "require": "^0.4.4",
-=======
-    "mocha": "^9.1.3",
-    "mongodb": "^4.2.1",
-    "request": "^2.88.2",
->>>>>>> 12c86d77f0bfac0f7672af1d82597982512afbdf
-    "socket.io": "^4.4.0"
+    "socket.io": "^4.4.0",
+    "yalm": "^4.1.0",
+    "yargs": "^17.3.1"
+  },
+  "xo": {
+    "space": 4
+  },
+  "devDependencies": {
+    "camo-purge": "latest",
+    "nodemon": "^2.0.15",
+    "xo": "latest"
   },
   "main": "server.js",
   "scripts": {
     "start": "set PORT=3030 && set name=priyanka && node server.js",
     "start-dev": "nodemon server.js",
     "test": "mocha --reporter spec"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
   }
 }
